--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: 2.0.10+1
   flutter_native_splash: ^2.4.0
+  get: ^4.6.6
+  flutter_lorem: ^2.0.0
 
 dev_dependencies:
   flutter_test:
