--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_lorem: ^2.0.0
   flutter_secure_storage: ^9.2.2
 
+  http: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
